--- a/_config.yml
+++ b/_config.yml
@@ -198,6 +198,8 @@ exclude:
   - package.json
   - package-lock.json
   - _pages/about_einstein.md
+  - _pages/blog.md
+  - _pages/news.md
   - purgecss.config.js
   - README.md
   - readme_preview/
