--- a/_config.yml
+++ b/_config.yml
@@ -200,6 +200,11 @@ exclude:
   - _pages/about_einstein.md
   - _pages/blog.md
   - _pages/news.md
+  - _pages/teaching.md
+  - _pages/profiles.md
+  - _pages/dropdown.md
+  - _pages/projects.md
+  - _pages/repositories.md
   - purgecss.config.js
   - README.md
   - readme_preview/
