Update about page, remove publications page.

--- a/_config.yml
+++ b/_config.yml
@@ -204,6 +204,7 @@ exclude:
   - _pages/dropdown.md
   - _pages/projects.md
   - _pages/repositories.md
+  - _pages/publications.md
   - purgecss.config.js
   - README.md
   - readme_preview/
